change text color

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -34,8 +34,8 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 0
-    y: 0
+    x: 10
+    y: 10
 
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: false
@@ -175,7 +175,7 @@ colors:
   # Default colors
   primary:
     background: '0x000000'
-    foreground: '0xeaeaea'
+    foreground: '0xababab'
 
     # Bright and dim foreground colors
     #
@@ -211,7 +211,7 @@ colors:
     blue:    '0x7aa6da'
     magenta: '0xc397d8'
     cyan:    '0x70c0ba'
-    white:   '0xeaeaea'
+    white:   '0xdedede'
 
   # Bright colors
   bright:
@@ -222,7 +222,7 @@ colors:
     blue:    '0x7aa6da'
     magenta: '0xb77ee0'
     cyan:    '0x54ced6'
-    white:   '0xffffff'
+    white:   '0xdedede'
 
   # Dim colors
   #
