--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -172,30 +172,30 @@ draw_bold_text_with_bright_colors: true
 
 colors:
     primary:
-        background: '0x1d2021'
-        foreground: '0xD8DEE9'
+        background: '0x2B303B'
+        foreground: '0xc7ccd1'
     cursor:
         text: '0x2E3440'
         cursor: '0xD8DEE9'
     normal:
-        black:   '0x000000'
-        red:     '0xd54e53'
-        green:   '0xb9ca4a'
-        yellow:  '0xe6c547'
-        blue:    '0x7aa6da'
-        magenta: '0xc397d8'
-        cyan:    '0x70c0ba'
-        white:   '0xeaeaea'
+        black:   '0x1c2023'
+        red:     '0xD08770'
+        green:   '0x95c7ae'
+        yellow:  '0xaec795'
+        blue:    '0xae95c7'
+        magenta: '0xc795ae'
+        cyan:    '0x95aec7'
+        white:   '0xc7ccd1'
     # Bright colors
     bright:
-        black:   '0x666666'
-        red:     '0xff3334'
-        green:   '0x9ec400'
-        yellow:  '0xe7c547'
-        blue:    '0x7aa6da'
-        magenta: '0xb77ee0'
-        cyan:    '0x54ced6'
-        white:   '0xffffff'
+        black:   '0x747c84'
+        red:     '0xD08770'
+        green:   '0x95c7ae'
+        yellow:  '0xaec795'
+        blue:    '0xae95c7'
+        magenta: '0xc795ae'
+        cyan:    '0x95aec7'
+        white:   '0xf3f4f5'
 
 
 # Visual Bell
@@ -228,7 +228,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1
+background_opacity: 0.8
 
 # Mouse bindings
 #
