--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -86,7 +86,6 @@ scrolling:
   # Specifying `0` will disable faux scrolling.
 
   # Scroll to the bottom when new text is written to the terminal.
-  auto_scroll: false
 
 # Spaces per Tab (changes require restart)
 #
@@ -95,7 +94,7 @@ scrolling:
 # Some applications, like Emacs, rely on knowing about the width of a tab.
 # To prevent unexpected behavior in these applications, it's also required to
 # change the `it` value in terminfo when altering this setting.
-tabspaces: 8
+
 
 # Font configuration (changes require restart)
 font:
@@ -169,34 +168,33 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-
 colors:
-    primary:
-        background: '0x2B303B'
-        foreground: '0xc7ccd1'
-    cursor:
-        text: '0x2E3440'
-        cursor: '0xD8DEE9'
-    normal:
-        black:   '0x1c2023'
-        red:     '0xD08770'
-        green:   '0x95c7ae'
-        yellow:  '0xaec795'
-        blue:    '0xae95c7'
-        magenta: '0xc795ae'
-        cyan:    '0x95aec7'
-        white:   '0xc7ccd1'
-    # Bright colors
-    bright:
-        black:   '0x747c84'
-        red:     '0xD08770'
-        green:   '0x95c7ae'
-        yellow:  '0xaec795'
-        blue:    '0xae95c7'
-        magenta: '0xc795ae'
-        cyan:    '0x95aec7'
-        white:   '0xf3f4f5'
+  # Default colors
+  primary:
+    background: '0x252525'
+    foreground: '0xeaeaea'
 
+ # Normal colors
+  normal:
+    black:   '0x000000'
+    red:     '0xd54e53'
+    green:   '0xb9ca4a'
+    yellow:  '0xe6c547'
+    blue:    '0x7aa6da'
+    magenta: '0xc397d8'
+    cyan:    '0x70c0ba'
+    white:   '0xeaeaea'
+
+  # Bright colors
+  bright:
+    black:   '0x666666'
+    red:     '0xff3334'
+    green:   '0x9ec400'
+    yellow:  '0xe7c547'
+    blue:    '0x7aa6da'
+    magenta: '0xb77ee0'
+    cyan:    '0x54ced6'
+    white:   '0xffffff'
 
 # Visual Bell
 #
@@ -228,7 +226,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.8
+background_opacity: 0.88
 
 # Mouse bindings
 #
